--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "meituan",
+  "name": "app",
   "version": "1.0.0",
-  "description": "美团网",
-  "author": "dobeco",
+  "description": "My phenomenal Nuxt.js project",
+  "author": "yinguohui",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --exec babel-node",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js --exec babel-node",
     "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/axios": "5.0.0",
-    "axios": "0.18.0",
+    "@koa/cors": "^2.2.3",
+    "@nuxtjs/axios": "^5.5.4",
+    "axios": "^0.19.0",
     "babel-preset-es2015": "6.24.1",
     "cross-env": "5.2.0",
     "crypto-js": "3.1.9-1",
@@ -26,9 +28,9 @@
     "koa-passport": "4.1.1",
     "koa-redis": "3.1.2",
     "koa-router": "7.4.0",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "mongoose": "5.3.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "4.9.3",
     "nodemailer": "4.6.8",
     "nuxt": "2.0.0",
     "passport-local": "1.0.0",
@@ -39,6 +41,6 @@
     "eslint": "3.19.0",
     "eslint-loader": "2.0.0",
     "eslint-plugin-vue": "4.0.0",
-    "nodemon": "1.11.0"
+    "nodemon": "^1.19.1"
   }
 }
